bk_ida/gccida/c2/nothrow_function_p
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/nothrow_function_p/src/except.c:3659:4: error: expected ';' after expression
rtx epilogue_delay_list; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/nothrow_function_p/src/except.c:3659:5: error: use of undeclared identifier 'epilogue_delay_list'
rtx epilogue_delay_list; // rbx 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/nothrow_function_p/src/except.c:3677:1: error: use of undeclared identifier 'epilogue_delay_list'
epilogue_delay_list = cfun->epilogue_delay_list; 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/nothrow_function_p/src/except.c:3678:6: error: use of undeclared identifier 'epilogue_delay_list'
if ( epilogue_delay_list ) 
     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/nothrow_function_p/src/except.c:3680:30: error: use of undeclared identifier 'epilogue_delay_list'
while ( !can_throw_external( epilogue_delay_list) ) 
                             ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/nothrow_function_p/src/except.c:3682:1: error: use of undeclared identifier 'epilogue_delay_list'
epilogue_delay_list = ( rtx)epilogue_delay_list[1]; 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/nothrow_function_p/src/except.c:3683:7: error: use of undeclared identifier 'epilogue_delay_list'
if ( !epilogue_delay_list ) 
      ^
7 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/nothrow_function_p/src/obj/except.o] Error 1
